@@ -22,6 +22,8 @@ Revision history for DBIx::Class
         - Missing dependency check in t/60core.t (RT#62635)
         - Fix regressions in IC::DT registration logic
         - Fix infinite loops on old perls with a recent Try::Tiny
+        - Improve "fork()" on Win32 by reimplementing a more robust DBIC
+          thread support (still problematic, pending a DBI fix)
 
     * Misc
         - Switch all serialization to use Storable::nfreeze for portable
